<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/fragment_slide_page">

    <TextView
        android:id="@+id/restaurantNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        />
    <ImageView
        android:id="@+id/restaurantImageView"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/restaurantNameText"
        />
    <Button
        android:id="@+id/getDirectionsButton"
        android:text="Get Directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/restaurantImageView"
        />
    <Button
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/mockitoNavigationButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="mockitoScrollDown"
        />
</RelativeLayout>