...

    <Button
        android:drawableEnd="@drawable/yelp_logo_scaled"
        android:drawableRight="@drawable/yelp_logo_scaled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yelpButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sriPhoneNumber"
        android:text=" View On "
        />

    <ImageView
...
